--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header center">
         <div class="brand">
             <img class="brang-img" src="./img/logo.png" alt="логотип бренда" />
             <p class="brand-name">Grow<span class="end-of-name">Be</span></p>
@@ -25,32 +26,36 @@
             <a class="nav-link" href="#">Contact</a>
         </div>
     </header>
-    <div class="main-content">
+    <div class="main-content center">
         <div class="main-content-text">
             <h1 class="main-title"> SEO & Digital Marketing For Your Website.
             </h1>
-            <p class="text-content"> Provide all kind of seo services and help
+            <p class="text-content" width="466px"> Provide all kind of seo services and help
                 to improve seo ranking. Globally incubate standards. </p>
-        </div>
-        <div class="main-content-buttons">
-            <a class="pushbutton">Start Now</a>
-            <a class="video-link">Whatch Video</a>
+            <div class="main-content-buttons">
+                <a class="pushbutton">Start Now</a>
+                <a class="video-link">Whatch Video</a>
+            </div>
         </div>
         <img class="main-content-img" src="./img/Content-img.png"
-             alt="Изображение рабочего процесса"/>
+                 alt="Изображение рабочего процесса" width="545px"/>
     </div>
-    <div class="logo-line">
-        <img class="logo-img" src="./img/a374e5178dadb73462823b1507981243.png"
-             alt="лого liva" />
-        <img class="logo-img" src="./img/6.png" alt="лого kanba" />
-        <img class="logo-img" src="./img/d541ae9251221e9d705c8cb31d66a830.png"
-             alt="лого amara" />
-        <img class="logo-img" src="./img/b38888fd1dfbb854ffbce70b1b050587.png"
-             alt="лого aven" />
-        <img class="logo-img" src="./img/2c38373b974abe959f83404e92ad7d78.png"
-             alt="лого hexlab" />
-        <img class="logo-img" src="./img/6.png" alt="лого kanba" />
-    </div>
+        <div class="logo-line center">
+            <img class="logo-img"
+                 src="./img/a374e5178dadb73462823b1507981243.png"
+                 alt="лого liva" />
+            <img class="logo-img" src="./img/6.png" alt="лого kanba" />
+            <img class="logo-img"
+                 src="./img/d541ae9251221e9d705c8cb31d66a830.png"
+                 alt="лого amara" />
+            <img class="logo-img"
+                 src="./img/b38888fd1dfbb854ffbce70b1b050587.png"
+                 alt="лого aven" />
+            <img class="logo-img"
+                 src="./img/2c38373b974abe959f83404e92ad7d78.png"
+                 alt="лого hexlab" />
+            <img class="logo-img" src="./img/6.png" alt="лого kanba" />
+        </div>
 </body>
 
 </html>
