--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="brand-name">Grow<span class="end-of-name">Be</span></p>
         </div>
         <div class="nav">
-            <a class="nav-link-home" href="#">Home</a>
+            <a class="link-home" href="#">Home</a>
             <a class="nav-link" href="#">About Us</a>
             <a class="nav-link" href="#">Services</a>
             <a class="nav-link" href="#">Features</a>
@@ -30,32 +30,93 @@
         <div class="main-content-text">
             <h1 class="main-title"> SEO & Digital Marketing For Your Website.
             </h1>
-            <p class="text-content" width="466px"> Provide all kind of seo services and help
+            <p class="text-content" width="466px"> Provide all kind of seo
+                services and help
                 to improve seo ranking. Globally incubate standards. </p>
             <div class="main-content-buttons">
-                <a class="pushbutton">Start Now</a>
+                <button class="pushbutton">Start Now</button>
                 <a class="video-link">Whatch Video</a>
             </div>
         </div>
         <img class="main-content-img" src="./img/Content-img.png"
-                 alt="Изображение рабочего процесса" width="545px"/>
+             alt="Изображение рабочего процесса" width="545px" />
     </div>
-        <div class="logo-line center">
-            <img class="logo-img"
-                 src="./img/a374e5178dadb73462823b1507981243.png"
-                 alt="лого liva" />
-            <img class="logo-img" src="./img/6.png" alt="лого kanba" />
-            <img class="logo-img"
-                 src="./img/d541ae9251221e9d705c8cb31d66a830.png"
-                 alt="лого amara" />
-            <img class="logo-img"
-                 src="./img/b38888fd1dfbb854ffbce70b1b050587.png"
-                 alt="лого aven" />
-            <img class="logo-img"
-                 src="./img/2c38373b974abe959f83404e92ad7d78.png"
-                 alt="лого hexlab" />
-            <img class="logo-img" src="./img/6.png" alt="лого kanba" />
+    <div class="logo-line center">
+        <img class="logo-img" src="./img/a374e5178dadb73462823b1507981243.png"
+             alt="лого liva" />
+        <img class="logo-img" src="./img/6.png" alt="лого kanba" />
+        <img class="logo-img" src="./img/d541ae9251221e9d705c8cb31d66a830.png"
+             alt="лого amara" />
+        <img class="logo-img" src="./img/b38888fd1dfbb854ffbce70b1b050587.png"
+             alt="лого aven" />
+        <img class="logo-img" src="./img/2c38373b974abe959f83404e92ad7d78.png"
+             alt="лого hexlab" />
+        <img class="logo-img" src="./img/6.png" alt="лого kanba" />
+    </div>
+    <div class="potential">
+        <div class="potential-item">
+            <img src="./img/icon.svg" alt="Первая иконка">
+            <h3>Grow Your Business</h3>
+            <p>Leverage agile frameworks to provide a robust synopsis for high
+                level overviews.</p>
+            <a href="#">Read More...</a>
         </div>
+        <div class="potential-item">
+            <img src="./img/icon1.svg" alt="Вторая иконка">
+            <h3>Get Quality Ieads</h3>
+            <p>Leverage agile frameworks to provide a robust synopsis for high
+                level overviews.</p>
+            <a href="#">Read More...</a>
+        </div>
+        <div class="potential-item">
+            <img src="./img/icon2.svg" alt="Третья иконка">
+            <h3>Drive More Sales</h3>
+            <p>Leverage agile frameworks to provide a robust synopsis for high
+                level overviews.</p>
+            <a href="#">Read More...</a>
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="why-we">
+            <h2>Why You Should Choose Us.</h2>
+            <p>Distinctively exploit optimal alignments for intuitive bandwidth.
+                Quickly coordinate e-business
+                applications through revolutionary catalysts.</p>
+        </div>
+        <div class="advantage-items center">
+            <div class="advantage-item">
+                <img src="./img/ea3b057cae781d11d3939e64f2ec3834.png"
+                     alt="Исследование ключевых слов">
+                <h3 class=>Keyword Research</h3>
+                <p>Business applications through revolutionary catalysts for
+                    chang the
+                    Seamlessly underwhelm dures.</p>
+                <button class="push" href="#">Learn More ›</button>
+            </div>
+            <div class="advantage-item">
+                <img src="./img/a7d62b6683cbc9f4626b910208973585.png"
+                     alt="Оптимизация Seo">
+                <h3>Seo Optimazadion</h3>
+                <p>Business applications through revolutionary catalysts for
+                    chang
+                    the
+                    Seamlessly underwhelm dures.</p>
+                <button class="push" href="#">Learn More ›</button>
+            </div>
+            <div class="advantage-item">
+                <img src="./img/4858069daa9d31b244441a9b135403f3.png"
+                     alt="Общественный маркетинг">
+                <h3>Social Marketing</h3>
+                <p>Business applications through revolutionary catalysts for
+                    chang
+                    the
+                    Seamlessly underwhelm dures.</p>
+                <button class="push" href="#">Learn More ›</button>
+            </div>
+        </div>
+
+
+
 </body>
 
 </html>
